tests/baselines/reference/undefinedSymbolReferencedInArrayLiteral1.errors.txt
==== tests/cases/compiler/undefinedSymbolReferencedInArrayLiteral1.ts (3 errors) ====
    var tokens = [{ startIndex: deltaOffset }];
                                ~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'deltaOffset'.
    
    var functions = [function() {
        [1, 2, 3].NonexistantMethod();
                  ~~~~~~~~~~~~~~~~~
!!! error TS2094: The property 'NonexistantMethod' does not exist on value of type 'number[]'.
        anotherNonExistingMethod();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'anotherNonExistingMethod'.
    }];
    
    